hedtools/tests/data/invalid_wiki_schemas/HED_hed_no_end.mediawiki
HED version:8.0.0-alpha.1


This is a prologue line.
This is a second prologue line.

!# start schema

!# end schema
